added Google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,4 @@ title: Another Blog on All Things Analytics
 tagline: 
 description: Analytics, Data Science and More...
 paginate: 5
+google_analytics: UA-79207830-1
