--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ pygments: true
 markdown: kramdown
 url: http://datasciencemonkey.github.io
 title: Another Blog on All Things Analytics
+email: datasciencemonkey@gmail.com
 tagline: 
 description: Analytics, Data Science and More...
 paginate: 5
