--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ excerpt_separator: ""
 pygments: true
 markdown: kramdown
 url: http://datasciencemonkey.github.io
-title: Another Blog on All Things Analytics
+title: Another blog on all things Analytics
 email: datasciencemonkey@gmail.com
 tagline: 
 description: Analytics, Data Science and More...
